apps/apps/nginx-sec.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: nginx
  namespace: kiodo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.15
          ports:
          - containerPort: 80
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: db
  namespace: kiodo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: nginx
          image: nginx:1.15
          ports:
          - containerPort: 80
