apps/apps/nsx-pod-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nsx-demo.policy
  namespace: kiodo
spec:
  podSelector:
    matchLabels:
      app: db
  ingress:
  -  from:
       - podSelector:
           matchLabels:
             app: nginx
     ports:
       - port: 80
         protocol: TCP
